significant changes to Instance, Schema and Evaluation. Update some of the notebooks to reflect the changes.

--- a/notebooks/DriftStream_API.ipynb
+++ b/notebooks/DriftStream_API.ipynb
@@ -15,10 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "d65295f8-e9bc-4739-b377-cee24042eb04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "capymoa_root: /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/CapyMOA/src/capymoa\n",
+      "MOA jar path location (config.ini): /Users/gomeshe/Dropbox/ciencia_computacao/dev/main-projects/CapyMOA/src/capymoa/jar/moa.jar\n",
+      "JVM Location (system): \n",
+      "JAVA_HOME: /Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "Sucessfully started the JVM and added MOA jar to the class path\n"
+     ]
+    }
+   ],
    "source": [
     "from capymoa.stream import stream_from_file\n",
     "\n",
@@ -40,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "a75d7ceb-040f-48c4-9778-d19d41fbff16",
    "metadata": {},
    "outputs": [
@@ -203,7 +216,7 @@
     "stream_sea2drift = Stream(moa_stream=ConceptDriftStream(), \n",
     "    CLI=\"-s (ConceptDriftStream -s (generators.SEAGenerator -f 1) -d (generators.SEAGenerator -f 2) -p 5000 -w 1) -d (generators.SEAGenerator -f 3) -p 10000 -w 2000\")\n",
     "\n",
-    "OB = OnlineBagging(ensemble_size=10)\n",
+    "OB = OnlineBagging(schema=stream_sea2drift.get_schema(), ensemble_size=10)\n",
     "\n",
     "results_sea2drift_OB = prequential_evaluation(stream=stream_sea2drift, learner=OB, window_size=100, max_instances=15000)\n",
     "\n",
@@ -227,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "f3788b95-1e3c-4241-a9d0-3b92adffd3d2",
    "metadata": {},
    "outputs": [
@@ -260,7 +273,7 @@
     "                                # GradualDrift(start=9000, end=12000),\n",
     "                                SEA(function=1)])\n",
     "\n",
-    "OB = OnlineBagging(ensemble_size=10)\n",
+    "OB = OnlineBagging(schema=stream_sea2drift.get_schema(), ensemble_size=10)\n",
     "\n",
     "results_sea2drift_OB = prequential_evaluation(stream=stream_sea2drift, learner=OB, window_size=100, max_instances=15000)\n",
     "\n",
@@ -271,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "37db3732-d804-4f10-b0d3-3b66f6420775",
    "metadata": {},
    "outputs": [
@@ -279,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SEA(function=1),AbruptDrift(position=5000),SEA(function=3),GradualDrift(position=10500, start=9000, end=12000, width=3000),SEA(function=1)\n"
+      "SEA(function=1),AbruptDrift(position=5000),SEA(function=3),GradualDrift(position=10000, start=9000, end=11000, width=2000),SEA(function=1)\n"
      ]
     }
    ],
@@ -308,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b68ad301-3e54-463c-b6a7-58ee6df9477e",
    "metadata": {},
    "outputs": [
@@ -316,7 +329,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<capymoa.stream.stream.Drift object at 0x127bce8e0>, <capymoa.stream.stream.Drift object at 0x2b0ea0880>]\n"
+      "[<capymoa.stream.stream.Drift object at 0x1075e0f40>, <capymoa.stream.stream.Drift object at 0x16a85a6a0>]\n"
      ]
     },
     {
@@ -337,7 +350,7 @@
     "                               CLI='-s (ConceptDriftStream -s generators.SEAGenerator -d (generators.SEAGenerator -f 3) -p 5000 -w 1) \\\n",
     "                               -d generators.SEAGenerator -w 200 -p 10000 -r 1 -a 0.0')\n",
     "\n",
-    "OB = OnlineBagging(ensemble_size=10)\n",
+    "OB = OnlineBagging(schema=stream_sea2drift.get_schema(), ensemble_size=10)\n",
     "\n",
     "results_sea2drift_OB = prequential_evaluation(stream=stream_sea2drift, learner=OB, window_size=100, max_instances=12000)\n",
     "\n",
@@ -348,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "6051003d-68f8-484d-97f9-90a25c77ca81",
    "metadata": {},
    "outputs": [
