--- a/notebooks/Using_jpype_MOA_example.ipynb
+++ b/notebooks/Using_jpype_MOA_example.ipynb
@@ -11,27 +11,20 @@
     "* This notebook does not use the prepare_jpype.py script\n",
     "* It servers as an example of how to use jpype directly (it is easy, but it is good to have this example around).\n",
     "\n",
-    "**Notebook last update: 20/11/2023**"
+    "**Notebook last update: 17/02/2024**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "id": "1e7fe1d7-21c6-40f7-b829-212a98889c83",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T22:05:23.603435Z",
-     "iopub.status.busy": "2024-01-10T22:05:23.602760Z",
-     "iopub.status.idle": "2024-01-10T22:05:23.611252Z",
-     "shell.execute_reply": "2024-01-10T22:05:23.610820Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JAVA_HOME:  /usr/lib/jvm/java-17-openjdk\n"
+      "JAVA_HOME:  /Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n"
      ]
     }
    ],
@@ -48,14 +41,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "712b607a-a9ef-4441-a212-6f86e0af75c5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T22:05:23.613403Z",
-     "iopub.status.busy": "2024-01-10T22:05:23.613264Z",
-     "iopub.status.idle": "2024-01-10T22:05:23.775530Z",
-     "shell.execute_reply": "2024-01-10T22:05:23.775086Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import jpype\n",
@@ -77,14 +63,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "61592628-0cd0-4b43-9e37-4fac3fb8ad03",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T22:05:23.777773Z",
-     "iopub.status.busy": "2024-01-10T22:05:23.777615Z",
-     "iopub.status.idle": "2024-01-10T22:05:23.792544Z",
-     "shell.execute_reply": "2024-01-10T22:05:23.791981Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -106,12 +85,6 @@
    "execution_count": 4,
    "id": "def73fba-7f72-4168-b621-1fc4b7c12a66",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-01-10T22:05:23.794636Z",
-     "iopub.status.busy": "2024-01-10T22:05:23.794488Z",
-     "iopub.status.idle": "2024-01-10T22:05:24.934370Z",
-     "shell.execute_reply": "2024-01-10T22:05:24.933803Z"
-    },
     "scrolled": true
    },
    "outputs": [
@@ -119,8 +92,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.62 s, sys: 565 ms, total: 4.19 s\n",
-      "Wall time: 1.12 s\n"
+      "CPU times: user 3.46 s, sys: 1.86 s, total: 5.32 s\n",
+      "Wall time: 1.07 s\n"
      ]
     },
     {
