Add Sphinx documentation

--- a/notebooks/00_getting_started.ipynb
+++ b/notebooks/00_getting_started.ipynb
@@ -6,7 +6,7 @@
    "id": "b773bf8e-c420-44e1-80a6-99f75dd12268",
    "metadata": {},
    "source": [
-    "## DEMO\n",
+    "# Getting started\n",
     "\n",
     "* Examples on how to use this library for classification and regression, reading files from CSVs and using synthetic generators from MOA.\n",
     "\n",
