--- a/notebooks/01_evaluation_and_data_reading.ipynb
+++ b/notebooks/01_evaluation_and_data_reading.ipynb
@@ -6,7 +6,7 @@
    "id": "223810fd-84a1-40f9-a303-2a64403b49fe",
    "metadata": {},
    "source": [
-    "## Testing the Evaluation methods and Data reading\n",
+    "# Evaluation methods and Data reading\n",
     "\n",
     "* Using prequential, test-then-train and windowed evaluation. \n",
     "* We show how using either CSV or ARFF the API works.\n",
@@ -51,7 +51,7 @@
    "id": "30fe25b3-25c3-42b4-a09e-7ecd655d7109",
    "metadata": {},
    "source": [
-    "# File paths"
+    "## File paths"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "id": "db159a24-78b9-472b-b3f4-78ea04522abe",
    "metadata": {},
    "source": [
-    "# Classification evaluation"
+    "## Classification evaluation"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "id": "df79e7d7-bde3-4b59-8479-a44247b3c26f",
    "metadata": {},
    "source": [
-    "## 0) [CLASSIFICATION] Reading a stream from a CSV file and using one learner\n",
+    "### Reading a stream from a CSV file and using one learner\n",
     "* Uses the ClassificationWindowedEvaluator directly"
    ]
   },
@@ -291,7 +291,7 @@
    "id": "f7b6994b-b90a-42cd-a37a-0d81f60faba3",
    "metadata": {},
    "source": [
-    "## 1) [CLASSIFICATION] Reading from an ARFF file and using 2 learners\n",
+    "### Reading from an ARFF file and using 2 learners\n",
     "* Uses the ClassificationEvaluator, thus it uses a cumulative approach for calculating the metrics (not windowed)"
    ]
   },
@@ -351,7 +351,7 @@
    "id": "99802e5d-c85c-448a-86ca-93910a245666",
    "metadata": {},
    "source": [
-    "## 2) [CLASSIFICATION] Reading the data from a CSV, then evaluating it using two learners. \n",
+    "### Reading the data from a CSV, then evaluating it using two learners. \n",
     "* **Using the ```prequential_evaluation``` which internally executes both ```ClassificationWindowedEvaluator``` and ```ClassificationEvaluator```**\n",
     "* ```prequential_evaluation``` allow us to have the windowed and cumulative results. So we can inspect the last accuracy and over time too. \n",
     "* We also plot the final results using ```plot_windowed_results```"
@@ -416,7 +416,7 @@
    "id": "041d84a3-aae9-4ad9-b440-a13d6808aeb7",
    "metadata": {},
    "source": [
-    "## 3) [CLASSIFICATION] Simple test-then-train evaluation (cumulative). "
+    "### Simple test-then-train evaluation (cumulative). "
    ]
   },
   {
@@ -457,7 +457,7 @@
    "id": "73eba126-2880-464c-a1ec-cdb16dc516da",
    "metadata": {},
    "source": [
-    "## 4) [CLASSIFICATION] Simple windowed evaluation"
+    "### Simple windowed evaluation"
    ]
   },
   {
@@ -499,7 +499,7 @@
    "id": "309212f3-8986-482b-88ac-85f862325bfe",
    "metadata": {},
    "source": [
-    "## 5) [CLASSIFICATION] Prequential evaluation, single stream, multiple learners. \n",
+    "### Prequential evaluation, single stream, multiple learners. \n",
     "* Important: the ```prequential_evaluation_multiple_learners``` iterate through the stream testing and training with each learner\n",
     "* This method does not calculate ```wallclock``` or ```cpu_time``` because the training and testing of each learner is interleaved"
    ]
@@ -556,7 +556,7 @@
    "id": "e43b65ec-4a28-48e9-9020-5b6d0334ce86",
    "metadata": {},
    "source": [
-    "## 6) [CLASSIFICATION] prequential_evaluation with a larger stream (100k instances)"
+    "### prequential_evaluation with a larger stream (100k instances)"
    ]
   },
   {
@@ -615,7 +615,7 @@
    "id": "ab1acb93-fb94-437f-ae63-7bc1c732071d",
    "metadata": {},
    "source": [
-    "## 7) [CLASSIFICATION] Reading the data from a large CSV\n",
+    "### Reading the data from a large CSV\n",
     "* Using the covtFD.csv file with more than 580k instances and 100 features\n"
    ]
   },
@@ -684,7 +684,7 @@
    "id": "1abf71a5-39a7-4262-bea1-cc7ad0cd4391",
    "metadata": {},
    "source": [
-    "# Regression evaluation"
+    "## Regression evaluation"
    ]
   },
   {
@@ -693,7 +693,7 @@
    "id": "120f118c-d8a5-4d10-aad1-a75a2ac122d8",
    "metadata": {},
    "source": [
-    "## 0) [REGRESSION] Reading a stream from a CSV file and using one learner\n",
+    "###  Reading a stream from a CSV file and using one learner\n",
     "* Uses the ```RegressionWindowedEvaluator``` directly"
    ]
   },
@@ -888,7 +888,7 @@
    "id": "5906e14c-db58-4fe9-90fe-a1765137509f",
    "metadata": {},
    "source": [
-    "## 1) [REGRESSION] Reading from an ARFF file and using 2 learners\n",
+    "### Reading from an ARFF file and using 2 learners\n",
     "* Uses the RegressionEvaluator, thus it uses a cumulative approach for calculating the metrics (not windowed)"
    ]
   },
@@ -948,7 +948,7 @@
    "id": "5dd4be58-65bc-45f6-9be5-4ad3effc3ab1",
    "metadata": {},
    "source": [
-    "## 2) [REGRESSION] Reading the data from a CSV, then evaluating it using two learners. \n",
+    "### Reading the data from a CSV, then evaluating it using two learners. \n",
     "* **Using the ```prequential_evaluation``` which internally executes both ```RegressionWindowedEvaluator``` and ```RegressionEvaluator```**\n",
     "* ```prequential_evaluation``` allow us to have the windowed and cumulative results. So we can inspect the last accuracy and over time too. \n",
     "* We also plot the final results using ```plot_windowed_results```"
@@ -1013,7 +1013,7 @@
    "id": "410145fa-5203-4c79-b86f-8ce891691751",
    "metadata": {},
    "source": [
-    "## 4) [REGRESSION] Simple test-then-train evaluation (cumulative). "
+    "### Simple test-then-train evaluation (cumulative). "
    ]
   },
   {
@@ -1054,7 +1054,7 @@
    "id": "96ffc568-8502-42e7-9768-a368ddc3c3f8",
    "metadata": {},
    "source": [
-    "## 5) [REGRESSION] Prequential evaluation, single stream, multiple learners. \n",
+    "### Prequential evaluation, single stream, multiple learners. \n",
     "* Important: the ```prequential_evaluation_multiple_learners``` iterate through the stream testing and training with each learner\n",
     "* This method does not calculate ```wallclock``` or ```cpu_time``` because the training and testing of each learner is interleaved"
    ]
