--- a/notebooks/02_learners_api_examples.ipynb
+++ b/notebooks/02_learners_api_examples.ipynb
@@ -6,16 +6,16 @@
    "id": "e74571ce-e81a-4321-a8f8-c7a9fe7b851a",
    "metadata": {},
    "source": [
-    "# Experimenting with several learners APIs for classification and regression\n",
+    "# Learners API Examples\n",
     "\n",
     "* ```MOAClassifier``` and ```MOARegressor```\n",
     "* ```AdaptiveRandomForest```, ```OnlineBagging``` and ```AdaptiveRandomForestRegressor```\n",
     "* ```ClassificationEvaluator```, ```ClassificationWindowedEvaluator```, ```RegressionEvaluator``` and ```RegressionWindowedEvaluator```\n",
     "\n",
-    "Some comments: \n",
+    "Some comments:\n",
+    "\n",
     "* We can use the ```MOAClassifier``` and ```MOARegressor``` to execute any MOA classifier and regressor, respectively.\n",
-    "* We can create wrappers for each class, like the AdaptiveRandomForest wrapper. Using an alias in here as we don't want to conflict with the MOA AdaptiveRandomForest. \n",
-    "```from classifiers import AdaptiveRandomForest as ARF```\n",
+    "* We can create wrappers for each class, like the AdaptiveRandomForest wrapper. Using an alias in here as we don't want to conflict with the MOA AdaptiveRandomForest. ```from classifiers import AdaptiveRandomForest as ARF```\n",
     "\n",
     "**Notebook last update: 17/02/2024**"
    ]
