--- a/notebooks/03_using_sklearn_pytorch.ipynb
+++ b/notebooks/03_using_sklearn_pytorch.ipynb
@@ -6,7 +6,7 @@
    "id": "b773bf8e-c420-44e1-80a6-99f75dd12268",
    "metadata": {},
    "source": [
-    "## Using sklearn and pytorch\n",
+    "# Using sklearn and pytorch\n",
     "\n",
     "* Demonstrate how someone can directly use sklearn learners or pytorch in CapyMOA.\n",
     "* Ideally, one should be free to use other learners\n",
