--- a/notebooks/04_drift_streams.ipynb
+++ b/notebooks/04_drift_streams.ipynb
@@ -1,11 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "48637040-3764-4a73-8e79-642fc1f9db09",
    "metadata": {},
    "source": [
-    "## DriftStream API\n",
+    "# DriftStream API\n",
     "\n",
     "* How to use the DriftStream API in CapyMOA\n",
     "* There are two proposals, one of which has been implemented already\n",
@@ -39,11 +40,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "19caafb9-2279-46ca-b12e-d92943af99b1",
    "metadata": {},
    "source": [
-    "# 1. Creating a synthetic stream with concept drifts from MOA\n",
+    "## 1. Creating a synthetic stream with concept drifts from MOA\n",
     "\n",
     "* Demonstrates the flexibility of the API, these level of manipulation of the API is expected from experienced MOA users.\n",
     "* To use the API like this the user must be familiar with how concept drifts are simulatd in MOA\n",
@@ -88,11 +90,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b295e120-8050-48a3-93b5-39efc295102b",
    "metadata": {},
    "source": [
-    "## 1.1 CapyMOA wrapper for MOA synthetic generators\n",
+    "### 1.1 CapyMOA wrapper for MOA synthetic generators\n",
     "\n",
     "* This is just an example on how to use a wrapper from CapyMOA"
    ]
@@ -301,19 +304,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6af25914-2e9a-401c-961c-174d9f5cffc2",
-   "metadata": {},
-   "source": [
-    "### "
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7f233c22-d543-4606-b175-08a76040d6cf",
    "metadata": {},
    "source": [
-    "### 2.2.1 Obtaining meta-data about drift from a MOA Stream\n",
+    "#### 2.2.1 Obtaining meta-data about drift from a MOA Stream\n",
     "\n",
     "* Besides composing a drifting stream, the DriftStream object also holds information about the Drifts. \n",
     "* The meta-data about the drifts can be used for calculating concept drift statistics (i.e. metrics to calculate drift detection performance)"
